--- a/src/app/pages/search-results/search-results.component.scss
+++ b/src/app/pages/search-results/search-results.component.scss
@@ -19,17 +19,18 @@ h2{
     width: 100%;
   }
 }
-@media (max-width: 490px) {
-  .movies-grid {
+@media (max-width: 430px) {
+  .movie-grid {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 4px;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 3px;
   }
    .results {
-    width: 430px;
+    width: 100%;
   }
   img{
     width: 135px;
+    height: auto;
   }
 }
 .movie-card{
@@ -46,10 +47,11 @@ h2{
   
   width: 100%;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
-  gap: 16px;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 3px;
   img {
     width: 100%;
+    height: auto;
   }
 }
 .series-section {
